--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 5000
 DATABASE_URL = mongodb+srv://system_admin:admin321@cluster0.nlveijr.mongodb.net/user_based_order_system?retryWrites=true&w=majority
 
+NODE_ENV = development
 
 
-# admin321
-# system_admin
+
