--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-unused-vars": "off"
   },
   "globals": {
     "process": "readonly"
