--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prod": "node ./dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "deploy": "tsc && vercel deploy && vercel --prod",
     "lint": "eslint src --ignore-path .eslintignore --ext .ts",
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier src --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
