--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "no-unused-vars": "off"
   },
   "globals": {
