--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT = 5000
-DATABASE_URL = mongodb+srv://system_admin:admin321@cluster0.nlveijr.mongodb.net/user_based_order_system?retryWrites=true&w=majority
 NODE_ENV = development
 PRODUCT_URL = https://user-based-order-system.vercel.app/
-
+PORT = 5000
+DATABASE_URL = mongodb+srv://system_admin:admin321@cluster0.nlveijr.mongodb.net/user_based_order_system?retryWrites=true&w=majority
+BCRYPT_SALT_ROUND = 12
